# SDL2-Sorting-Visualizer-CPP

./: .gitignore  .nvimrc  .vimspector.json  CMakeLists.txt  jaba.cpp
include/: Game.hpp
src/: Application.cpp  Game.cpp  Main.cpp
